# stellar-quest-solutions

./: LICENSE  README.md  pyproject.toml  requirements.txt
quest-5/challenge-1/: 0-deploy-hello-world-contarct.py
quest-5/challenge-2/: 0-deploy-auth-store-contract.py  1-invoke-put-function.py  2-invoke-get-function.py  3-invoke-get-self-function.py
quest-5/challenge-3/: 0-deploy-reverse-engineer-contract.py  1-invoke-submit-function.py
quest-5/challenge-4/: 0-deploy-auth-store-contract.py  1-deploy-cross-contract-call-contract.py  2-invoke-put-function.py  3-invoke-inv-get-function.py
quest-5/challenge-5/: 1-invoke-c-rect-function.py  2-invoke-c-animal-function.py  4-invoke-c-rgb-function.py  6-invoke-c-part-function.py
quest-5/challenge-5/custom-types-contract/: Cargo.toml  README.md
quest-5/challenge-5/custom-types-contract/src/: types.rs
series-5/challenge-1/: 0-deploy-hello-world-contarct.py
series-5/challenge-2/: 0-deploy-auth-store-contract.py  1-invoke-put-function.py  2-invoke-get-function.py  3-invoke-get-self-function.py
series-5/challenge-3/: 0-deploy-reverse-engineer-contract.py  1-invoke-submit-function.py
series-5/challenge-4/: 0-deploy-auth-store-contract.py  1-deploy-cross-contract-call-contract.py  2-invoke-put-function.py  3-invoke-inv-get-function.py
series-5/challenge-5/: 0-deploy-custom-types-contract.py  3-invoke-c-user-function.py  5-invoke-c-color-function.py  7-invoke-c-card-function.py  8-invoke-verify-function.py
series-5/challenge-6/: 0-deploy-asset-interop-contract.py  1-get-native-asset-contract-id.py  (+6 more)
(+1 files in other folders)
