[tool.poetry]
name = "stellar-quest-solutions"
version = "0.1.0"
description = "Stellar Quest Solutions."
authors = ["overcat <4catcode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
stellar-sdk = { git = "https://github.com/StellarCN/py-stellar-base.git", rev = "6d8367b6020f6261e875f110b361a235bf0cf424" }

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
